Update and rename pertemuan5.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <a name="Atas"></a><h1>Belajar Hyperlink</h1>
     </center>
     
-    <a href="211011400406.html">Menuju Ke Pertemuan 4</a> <br>
+    <a href="TugasPertemuan6.html">Menuju Ke Pertemuan 4</a> <br>
     <a href="https:\\google.com">Membuka Halaman Google Mennggunakan Link Aboslute</a> <br>
-    <a href="mailto:settingg24@gmail.com">Buka Email</a> <br>
-    <a href="https:\\wa.me\6285693849805">Wa GUWEH</a> <br>
-    <a href="211011400406.html" target="_blank">Open New Tab For PT5</a>
+    <a href="mailto:settingg24@gmail.com">Buka Email </a> <br>
+    <a href="https:\\wa.me\6285693849805">WhatsApp Saya</a> <br>
+    <a href="TugasPertemuan6.html" target="_blank">Open New Tab For Tugas Pertemuan 6</a>
 
     <h2>
         <pre>
